--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -3,3 +3,17 @@ img {
     min-height: 180px;
     object-fit: cover;
 }
+
+.card-list {
+    background-color: #acc1d8;
+    border: 1px solid #697684;
+    width: 100%;
+}
+
+.card {
+    background-color: #BBB;
+    border: 1px solid #777;
+    padding: 30px;
+    color: darkblue;
+    margin: 10px;
+}
